--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="libs/spring-android-core-1.0.0.M4.jar"/>
+	<classpathentry kind="lib" path="libs/spring-android-rest-template-1.0.0.M4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
