--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,13 +15,14 @@
         android:name=".RestaurantApplication"
         android:debuggable="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/CustomTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".TablesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
