--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,12 +14,13 @@
     <application
         android:name=".RestaurantApplication"
         android:debuggable="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/CustomTheme" >
         <activity
             android:name=".TablesActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,7 +28,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="" >
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
