--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,11 +23,20 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".MenuActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".TableBillActivity"
             android:screenOrientation="portrait" >
         </activity>
     </application>
