--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,16 +29,16 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MenuActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".TableBillActivity"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LogoutActivity"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
