custom dialog for deleting products from order and refresh table bill list

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".AddProductDialogActivity"
             android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".DeleteBillDialogActivity"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
